<resources>
    <string name="app_name">Tip Calculator App</string>
    <string name="tip_amount_text">Tip Amount = %s</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="ok_10">OK (10%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
</resources>